--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-       <title>Welcome to tsotnep.com!</title>
+       <title>Welgo from tsotnep.com</title>
     </head>
     <body>
 
