not important update of the code, moved a file, changed variable name, formatted the code or something simillar, no need for special message

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <body>
 
 	<h1> DO YOU FEEL IN CHARGE? </h1>
-	<a href="index2.html">link text</a>
+	<a href="index2.html">link to another  </a>
 	<img src="./src/img/incharge.gif" alt="In_Charge" style="width:304px;height:228px;">
     </body>
 </html>
